# AI-Sous-Chef

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py
app/config/: prompts.py
app/core/: llm-speaker.py  llm_speaker.py  pdf-to-markdown.py  pdf_to_markdown.py  speech-manager.py  speech_manager.py  tools.py  wakeword.py
mcp/: server.py
models/: .gitignore
